tdf#157689: don't use workbook DB range for importing autofilters

When there was just a global anonymous DB range the import using the
global DB range made sense. With the per-sheet anonymous DB ranges
we can avoid this indirection and should use the range specified
in the autofilter entry.

Change-Id: Icc4879257c1f93a0977f118a8f89b6c87a5f5b52
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187977
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Tested-by: Jenkins